# game_of_life

./: Cargo.toml
src/: lib.rs  main.rs
