[package]
name = "game_of_life"
version = "0.1.0"
authors = ["Stephen Drodge <stephen.drodge@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
piston_window = "0.120.0"
rand = "0.8.4"

[profile.release]
debug = true
